// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCredentialDialog Component should export select options: options 1`] = `
Object {
  "authenticationTypeOptions": Array [
    Object {
      "title": [Function],
      "value": "sshKey",
    },
    Object {
      "selected": true,
      "title": [Function],
      "value": "usernamePassword",
    },
  ],
  "becomeMethodTypeOptions": Array [
    "sudo",
    "su",
    "pbrun",
    "pfexec",
    "doas",
    "dzdo",
    "ksu",
    "runas",
  ],
}
`;

exports[`CreateCredentialDialog Component should handle a pending display state: pending 1`] = `
<EmptyState
  className="quipucords-empty-state"
>
  <div
    className="pf-c-empty-state quipucords-empty-state"
  >
    <div
      className="pf-c-empty-state__content"
    >
      <EmptyStateIcon
        icon={[Function]}
      >
        <Spinner
          aria-hidden="true"
          className="pf-c-empty-state__icon"
        >
          <span
            aria-hidden="true"
            aria-label="Contents"
            aria-valuetext="Loading..."
            className="pf-c-spinner pf-m-xl pf-c-empty-state__icon"
            role="progressbar"
          >
            <span
              className="pf-c-spinner__clipper"
            />
            <span
              className="pf-c-spinner__lead-ball"
            />
            <span
              className="pf-c-spinner__tail-ball"
            />
          </span>
        </Spinner>
      </EmptyStateIcon>
      <Title
        headingLevel="h3"
      >
        <h3
          className="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe={true}
        >
          t(form-dialog.empty-state_title, {"context":"pending"})
        </h3>
      </Title>
    </div>
  </div>
</EmptyState>
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for network credential type: network 1`] = `
Array [
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-1",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "generatedid-",
    "name": "generatedid-",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "readOnly": true,
    "required": false,
    "type": "text",
    "value": "t(form-dialog.label, {\\"context\\":\\"network\\"})",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-2",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "cred_name",
    "maxLength": 64,
    "name": "name",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter a name for the credential",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-3",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "username",
    "name": "username",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter Username",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-4",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "password",
    "name": "password",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter password",
    "readOnly": false,
    "required": false,
    "type": "password",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-5",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "become_user",
    "name": "become_user",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "optional",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-6",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "become_password",
    "name": "become_password",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "optional",
    "readOnly": false,
    "required": false,
    "type": "password",
    "value": "",
  },
  Object {
    "ariaLabel": "Select option",
    "buttonVariant": "default",
    "className": "",
    "direction": "down",
    "id": "generatedid-",
    "isDisabled": false,
    "isDropdownButton": false,
    "isInline": false,
    "isToggleText": true,
    "maxHeight": null,
    "name": null,
    "onSelect": [Function],
    "options": Array [
      Object {
        "title": [Function],
        "value": "sshKey",
      },
      Object {
        "selected": true,
        "title": [Function],
        "value": "usernamePassword",
      },
    ],
    "placeholder": "Select option",
    "position": "left",
    "selectedOptions": "usernamePassword",
    "splitButtonVariant": null,
    "toggleIcon": null,
    "variant": "single",
  },
  Object {
    "ariaLabel": "Select option",
    "buttonVariant": "default",
    "className": "",
    "direction": "up",
    "id": "generatedid-",
    "isDisabled": false,
    "isDropdownButton": false,
    "isInline": false,
    "isToggleText": true,
    "maxHeight": null,
    "name": "become_method",
    "onSelect": [Function],
    "options": Array [
      "sudo",
      "su",
      "pbrun",
      "pfexec",
      "doas",
      "dzdo",
      "ksu",
      "runas",
    ],
    "placeholder": "Select option",
    "position": "left",
    "selectedOptions": null,
    "splitButtonVariant": null,
    "toggleIcon": null,
    "variant": "single",
  },
]
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for satellite credential type: satellite 1`] = `
Array [
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-7",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "generatedid-",
    "name": "generatedid-",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "readOnly": true,
    "required": false,
    "type": "text",
    "value": "t(form-dialog.label, {\\"context\\":\\"satellite\\"})",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-8",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "cred_name",
    "maxLength": 64,
    "name": "name",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter a name for the credential",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-9",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "username",
    "name": "username",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter Username",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-10",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "password",
    "name": "password",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter password",
    "readOnly": false,
    "required": false,
    "type": "password",
    "value": "",
  },
]
`;

exports[`CreateCredentialDialog Component should handle variations in basic form display for vcenter credential type: vcenter 1`] = `
Array [
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-11",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "generatedid-",
    "name": "generatedid-",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "readOnly": true,
    "required": false,
    "type": "text",
    "value": "t(form-dialog.label, {\\"context\\":\\"vcenter\\"})",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-12",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "cred_name",
    "maxLength": 64,
    "name": "name",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter a name for the credential",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-13",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "username",
    "name": "username",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter Username",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  Object {
    "aria-invalid": false,
    "aria-label": null,
    "className": "pf-c-form-control quipucords-form__text-input ",
    "data-ouia-component-id": "OUIA-Generated-TextInputBase-14",
    "data-ouia-component-type": "PF4/TextInput",
    "data-ouia-safe": true,
    "disabled": false,
    "id": "password",
    "name": "password",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "onKeyUp": [Function],
    "onMouseUp": [Function],
    "placeholder": "Enter password",
    "readOnly": false,
    "required": false,
    "type": "password",
    "value": "",
  },
]
`;

exports[`CreateCredentialDialog Component should render a basic component: basic 1`] = `
<FormState
  key="form-undefined"
  onReset={[Function]}
  onSubmit={[Function]}
  resetUsingSetValues={true}
  setValues={
    Object {
      "cred_type": "network",
    }
  }
  setValuesAssumeBoolIsChecked={true}
  setValuesOnUpdate={false}
  validate={[Function]}
  validateOnMount={false}
  validateOnUpdate={false}
>
  <Component />
</FormState>
`;
